--- a/src/app/components/companies/companies.component.html
+++ b/src/app/components/companies/companies.component.html
@@ -7,6 +7,8 @@
         </h4>
      </div>
 
+     
+     
     <div class="container-icon-images">
         <div class="container-icon">
             <img src="assets/svg/companies/rubrik.svg" alt="logo1"/>
@@ -44,10 +46,11 @@
                <img src="assets/svg/logo-white.svg" alt="logo">
            </div> 
            
-           <p class="text-title">
-               Join the Business <br> and Individual <br> Features 
-           </p>
-   
+           <div class="container-text-title">
+               <p class="text-title">
+                    Join the Business and Individual Features 
+                </p>     
+           </div>
            <p class="text-subtitle">
                Join for free and earn points
            </p>
@@ -58,9 +61,6 @@
     </div>
 
 
-
-    
-    
     <div class="container-description">
           <div class="description1"> 
                <div>
