--- a/src/app/components/our-apps/our-apps.component.html
+++ b/src/app/components/our-apps/our-apps.component.html
@@ -1,8 +1,9 @@
 <div class="container-our-apps">
    <div class="item-detail">
-    <h5 class="title">enjoy the full experience in the app</h5>
-    <p class="description">Supercharge your customer track record.  </p> 
-   
+    <div class="item-detail-text">
+        <h5 class="title">enjoy the full experience in the app</h5>
+        <p class="description">Supercharge your customer track record.  </p> 
+    </div>
     <div class="container-buttons">
 
         <button type="button" class="btn-app-white"> 
@@ -12,14 +13,15 @@
         <button type="button" class="btn-app-white"> 
             <img src="assets/img/apple-app.png" alt="Apple App">
         </button>
-
     </div>
-
    </div>
    <div class="item-imagen">
      <img src="assets/img/our-apps.png" alt="Our Apps">
    </div>
 </div>
+
+
+
 
 
 
