--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -1,34 +1,38 @@
 .container-about{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 100px;
     margin-bottom: 78px;
+    padding-left: 5%;
+    padding-right: 5%;
+    margin-top: 30px;
 }
 
 .imagen img{
-    width: 616.124px;
+    max-width: 640px;
+    width: 450px;
     height: auto;
 }
 
+
 .description{
-    width: 640px;
-    max-width: 35%;
+    max-width: 640px;
+    width: 450px;
 }
 
 
 .icon img{
     width: 54px;
     height: 45px;
-    margin-bottom: 16px;
+    margin-bottom: 1px;
 }
 
 
 .title-description{
     font-family: FM Bolyar Pro;
     color: #181E45;
-    font-size: 54px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 700;
     line-height: 64px; /* 118.519% */
@@ -48,8 +52,51 @@
 }
 
 
-@media screen and (max-width: 1116px) {
-   
+
+@media only screen and (min-width: 796px) and (max-width: 1200px) {
+
+    .title-description {
+        font-size: 30px;
+        line-height: 39px;
+    }
+
+    .imagen img{
+        width: 350px;
+    }
+    
+    .description{
+        width: 350px;
+    }
+}
+
+
+
+@media only screen and (min-width: 577px) and (max-width: 795px) {
+    .imagen{
+        display: flex;
+        justify-content: center;
+    }
+
+    .imagen img{
+        width: 80%;
+    }
+    
+    .description {
+        width: 90%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .title-description {
+        font-size: 30px;
+        line-height: 39px;
+    }
+}
+
+@media screen and (max-width: 576px) {
     .container-about{
         display: flex;
         flex-direction: column;
@@ -94,5 +141,4 @@
         font-size: 16px;
         line-height: 24px; 
     }
-
 }
