--- a/src/app/components/advantages/advantages.component.css
+++ b/src/app/components/advantages/advantages.component.css
@@ -13,6 +13,7 @@
     justify-content: center;
 }
 
+
 .icon img{
     width: 54px;
     height: 45px;
@@ -23,10 +24,10 @@
     color: #FFF;
     text-align: center;
     font-family: FM Bolyar Pro;
-    font-size: 48px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 700;
-    line-height: 56px; /* 116.667% */
+    line-height: 56px; 
     margin-bottom: 16px;
 }
 
@@ -42,7 +43,6 @@
 
 .container-items {
     display: flex;
-    /* align-items: center; */
     align-content: space-around;
     justify-content: center;
     flex-wrap: wrap;
@@ -53,9 +53,6 @@
    justify-content: flex-start;
    gap: 30px;
    padding: 42px 30px;
-   /* width: 460px; */
-   /* width: 33.33%;
-   max-width: 640px; */
    width: 26%;
    max-width: 640px;
    min-width: 300px
@@ -96,7 +93,45 @@
 }
 
 
-@media screen and (max-width: 560px) {
+@media only screen and (min-width: 796px) and (max-width: 1200px) {
+    .detail{
+        align-self: center;
+        width: 90%;
+    }
+
+    .icon img{
+        margin-top: 80px;
+        margin-bottom: 10px;
+    }
+
+    .container-advantage h4{
+        font-size: 30px;
+        line-height: 38px; 
+    }
+}
+
+
+@media only screen and (min-width: 577px) and (max-width: 796px) {
+    .detail{
+        align-self: center;
+        width: 90%;
+    }
+
+    .icon img{
+        margin-top: 80px;
+        margin-bottom: 10px;
+    }
+
+    .container-advantage h4{
+        font-size: 30px;
+        line-height: 38px; 
+    }
+
+    
+}
+
+
+@media screen and (max-width: 576px) {
     
     .container-advantage{
         display: flex;
