--- a/src/app/components/fidback/fidback.component.css
+++ b/src/app/components/fidback/fidback.component.css
@@ -1,26 +1,24 @@
 .portada{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 70px;
-    gap: 5%;
+    margin-top: 40px;
 }
 
 .container-description{
     max-width: 640px;
-    width: 40.2%;
+    width: 540px;
 } 
 
 .title-description{
     font-family: FM Bolyar Pro;
     color: #181E45;
-    font-size: 45px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 700;
-    line-height: 64px; 
+    line-height: 54px; 
     text-transform: capitalize;
-    margin-bottom: 60px;
 }
 
 .sub-description{
@@ -30,7 +28,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px; 
-    margin-bottom: 60px;
 }
 
 .title-button{
@@ -42,18 +39,24 @@
     font-weight: 900;
     line-height: 18px; /* 100% */
     text-transform: uppercase;
-    margin-bottom: 24px;
     text-align: left;
 }
 
 
 .btn{
-    width: 258px;
-    height: 78px;
+    width: 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     flex-shrink: 0;
     border-radius: 12px;
     border: 1px solid #181E45;
     background: #FFF;
+}
+
+.btn img{
+     height: auto; 
+    width: 150px;
+
 }
 
 
@@ -61,20 +64,139 @@
 .container-buttons{
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
 }
  
 
 .container-portada img{
-    /* width: 700px;
-    height: 750px; */
     max-width: 700px;
-    width: 95%;
-    height: auto;
+    width: 560px;
+    /* height: auto; */
+    height: 600px;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    .portada{
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+    
+
+    .container-description{
+        width: 400px;
+    } 
+    
+    .title-description{
+        font-size: 30px;
+        line-height: 39px; 
+    }
+    
+    .sub-description{
+        font-size: 19px;
+        line-height: 25px; 
+    }
+
+    .container-portada img{
+        width: 440px;
+        height: 500px;
+    }
 }
 
 
 
-@media screen and (max-width: 560px) {
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+    .portada{
+        margin-left: 2%;
+        margin-right: 2%;
+        gap: 30px;
+    }
+    
+    .container-description{
+        width: 80%;
+
+    } 
+    
+    .title-description{
+        font-size: 30px;
+        line-height: 39px;
+        text-align: center; 
+    }
+    
+    .sub-description{
+        font-size: 19px;
+        line-height: 25px;
+        text-align: center; 
+    }
+
+    .container-portada img{
+        height: auto;
+        width: 400px;
+    }
+    .container-buttons {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .btn{
+        width: 150px;
+    }
+    
+    .btn img{
+        height: auto;
+        width: 100px;
+    }
+
+    .title-button{
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    .portada{
+        gap: 30px;
+    }
+
+    .container-description{
+        width: 80%;
+       
+    } 
+    
+    .title-description{
+        font-size: 30px;
+        line-height: 39px;
+        text-align: center; 
+    }
+    
+    .sub-description{
+        font-size: 19px;
+        line-height: 25px;
+        text-align: center; 
+    }
+
+    .title-button{
+        text-align: center;
+    }
+
+    .container-portada{
+        display: flex;
+        justify-content: center;
+    }
+
+    .container-portada img{
+        width: 80%;
+    }
+
+    .btn{
+        width: 150px;
+    }
+    
+    .btn img{
+        height: auto;
+        width: 100px;
+    }
+}
+
+@media screen and (max-width: 576px) {
     .portada{
         display: flex;
         flex-direction: column;
@@ -87,6 +209,7 @@
     }
 
     .container-description{
+        margin-top: 30px;
         width: 100%;
     } 
 
@@ -144,10 +267,3 @@
 
 }
 
-
-@media (max-width: 1292px) {
-    .container-description{
-        width: 90%;
-        margin: auto;
-    }
-}
