--- a/src/app/components/minium-requerid/minium-requerid.component.css
+++ b/src/app/components/minium-requerid/minium-requerid.component.css
@@ -1,35 +1,29 @@
 .container-minium{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin-top: 90px;
-    gap: 96px;
-}
-
-@media (max-width: 1110px) {
-    .description{
-        width: 100%;
-    }
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .container-minium .description{
-    /* width: 640px; */
-
     max-width: 640px;
-    width: 35%;
+    width: 450px;
 }
 
 
 .imagen img{
-    width: 616.124px;
-    height: 704px;
+    max-width: 640px;
+    width: 450px;
+    height: auto;
 }
 
 .description .title{
     color: #181E45;
     font-family: FM Bolyar Pro;
-    font-size: 48px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 700;
     line-height: 56px; /* 116.667% */
@@ -46,7 +40,61 @@
     margin-bottom: 60px;
 }
 
-@media screen and (max-width: 560px) {
+ /* @media (max-width: 1110px) {
+    .description{
+        width: 100%;
+    }
+}  */
+
+@media only screen and (min-width: 796px) and (max-width: 1200px) {
+    .container-minium .description{
+        width: 350px;
+    }
+
+    .description .title{
+        font-size: 30px;
+        line-height: 39px;
+    }
+    
+
+    .imagen img{
+        width: 350px;
+    }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 795px) { 
+    .container-minium{
+        display: flex;
+        justify-content: center;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .container-minium .description{
+        width: 90%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .imagen{
+        display: flex;
+        justify-content: center;
+    }
+
+    .imagen img{
+        width: 80%;
+    }
+
+    .description .title{
+        font-size: 30px;
+        line-height: 39px;
+    }
+    
+}
+
+
+@media screen and (max-width: 576px) {
     .container-minium{
         display: flex;
         flex-direction: column-reverse;
