--- a/src/app/components/minium-requerid/minium-requerid.component.html
+++ b/src/app/components/minium-requerid/minium-requerid.component.html
@@ -1,6 +1,6 @@
 <div class="container-minium">
     <div class="description">
-        <p class="title">Fidbaq is Easy / No <br> Minimum Required</p>
+        <p class="title">Fidbaq is Easy / No Minimum Required</p>
         <p class="subtitle">Register your purchases and expenses in less than 30 seconds.</p>
         <button type="button" class="button-black"><span>Get Started</span></button>
     </div>
