--- a/src/app/components/our-apps/our-apps.component.css
+++ b/src/app/components/our-apps/our-apps.component.css
@@ -3,16 +3,14 @@
     background-color: #181E45;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 128px;
     padding-top: 73px;
 }
 
 .item-detail{
-    /* width: 640px; */
     max-width: 640px;
-    width: 35%;
+    width: 540px;
 }
 
 
@@ -26,8 +24,8 @@
 }
 
 .description{
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 
     color: #FFF;
     font-family: Poppins;
@@ -42,9 +40,8 @@
 .container-buttons{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 0px 30px;
 }
 button{
     margin: 6px;
@@ -52,12 +49,104 @@ button{
 
 
 .item-imagen img{
-    max-width: 672px;
-    width: 95%;
-    height: 545px;
+    
+    height: auto;
+    max-width: 640px;
+    width: 540px;
 }
 
-@media screen and (max-width: 560px) {
+
+
+@media only screen and (min-width: 806px) and (max-width: 1200px) {
+    .container-our-apps{
+        gap: 30px;
+    }
+    .item-imagen img{
+        width: 380px;
+    }
+
+    .item-detail{
+        width: 380px;
+    }
+
+    .title{
+        font-size: 30px;
+        line-height: 38px;
+    }
+
+    .description{
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    
+    .container-buttons{
+        justify-content: space-between;
+        gap: 0px;
+    }
+
+    .btn-app-white {
+        width: 140px;
+        height: auto;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .btn-app-white img {
+        width: 100px;
+        height: auto;
+    } 
+}
+
+/* @media only screen and (min-width: 768px) and (max-width: 991px) {
+
+} */
+
+
+@media only screen and (min-width: 577px) and (max-width: 805px) {
+    .container-our-apps{
+
+        gap: 30px;
+    }
+
+    .item-imagen img{
+        width: 380px;
+    }
+
+    .item-detail{
+        width: 60%;
+        text-align: center;
+    }
+
+    .title{
+        font-size: 30px;
+        line-height: 38px;
+    }
+
+    .description{
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    
+    .container-buttons{
+        justify-content: space-between;
+        gap: 0px;
+    }
+
+    .btn-app-white {
+        width: 140px;
+        height: auto;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .btn-app-white img {
+        width: 100px;
+        height: auto;
+    } 
+}
+
+@media screen and (max-width: 576px) {
     .container-our-apps{
         display: flex;
         flex-direction: column;
@@ -86,6 +175,9 @@ button{
         font-style: normal;
         font-weight: 400;
         line-height: 24px; /* 150% */
+        
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .container-buttons{
@@ -93,10 +185,12 @@ button{
         justify-content: center;
         gap: 0px 12px;
     }
-
+ 
     .item-imagen img{
         width: 100%;
        height: auto;
     }
 
 }
+
+
