--- a/src/app/theme/nav-bar/nav-bar.component.css
+++ b/src/app/theme/nav-bar/nav-bar.component.css
@@ -112,10 +112,12 @@
     }
 }
 
+
 @media screen and (max-width: 1065px) {
     .container-nav{
         padding-left: 10px;
         padding-right: 10px;
+        margin-bottom: 18px;
     }
 
     .container-nav{
