--- a/src/app/theme/nav-bar/nav-bar.component.html
+++ b/src/app/theme/nav-bar/nav-bar.component.html
@@ -33,7 +33,7 @@
 </nav>
 <div class="container-fluid">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0 pt-3 pb-3">
       <li class="nav-item">
         <a class="nav-link" aria-current="page" [routerLink]="['/']"><span class="sub-menu-nav">Home</span></a>
       </li>
