--- a/src/app/components/companies/companies.component.html
+++ b/src/app/components/companies/companies.component.html
@@ -3,12 +3,9 @@
 
      <div class="title">
         <h4>
-          Trusted by the world’s largest<br/> and faster growing companies
+          Trusted by the world’s largest and faster growing companies
         </h4>
      </div>
-
-     
-     
     <div class="container-icon-images">
         <div class="container-icon">
             <img src="assets/svg/companies/rubrik.svg" alt="logo1"/>
