--- a/src/app/components/fidback/fidback.component.css
+++ b/src/app/components/fidback/fidback.component.css
@@ -28,6 +28,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px; 
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .title-button{
