--- a/src/app/components/minium-requerid/minium-requerid.component.css
+++ b/src/app/components/minium-requerid/minium-requerid.component.css
@@ -17,7 +17,8 @@
 .imagen img{
     max-width: 640px;
     width: 450px;
-    height: auto;
+    /* height: auto; */
+    height: 550px;
 }
 
 .description .title{
@@ -59,6 +60,7 @@
 
     .imagen img{
         width: 350px;
+        height: auto;
     }
 }
 
@@ -84,6 +86,7 @@
 
     .imagen img{
         width: 80%;
+        height: auto;
     }
 
     .description .title{
